Make sure side panel does not overflow. Fixes #210.

--- a/assets/css/dashboard.scss
+++ b/assets/css/dashboard.scss
@@ -15,8 +15,6 @@ html, body {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  -webkit-flex-direction: row;
-  flex-direction: row;
 
   width: 100%;
   height: 100%;
@@ -64,6 +62,7 @@ html, body {
     -webkit-flex: 1;
     -ms-flex: 1;
     flex: 1;
+    -webkit-flex-direction: column;
     flex-direction: column;
     > h3, > h4 {
       padding: 15px;
@@ -73,11 +72,6 @@ html, body {
     }
     .dashboard__panel__scroll {
       overflow: auto;
-      flex: 1;
-      display: flex;
-      > * {
-        flex: 1;
-      }
     }
   }
 
@@ -95,12 +89,25 @@ html, body {
     -ms-flex: 2.5;
     flex: 2.5;
 
+    -webkit-flex-direction: column;
     flex-direction: column;
+
     font-size: 11px;
 
-    .dashboard__panel {
-      min-height: 200px;
+    &-container {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+      -webkit-flex-direction: column;
+      flex-direction: column;
+    }
 
+    .dashboard__panel {
       h4 > a {
         color: #fff;
         &:hover, &:active {
